src/deploy/kubernetes/example/spring/example-tenant-0/callee-service/application/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${_Values_app_name}
spec:
  selector:
    matchLabels:
      app: ${_Values_app_name}
      version: v1
  replicas: 1
  strategy:
    type: Recreate #RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        sidecar.istio.io/inject: "true"

        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: ${_Values_app_name}
        version: v1
    spec:
#      imagePullSecrets:
#        - name: ${_Values_image_pullSecrets}
      containers:
        - name: ${_Values_app_name}
          image: "${_Values_image_repository}${_Values_server_arch}:${_Values_image_tag}"
#          image: "${_Values_image_repository}-native:${_Values_image_tag}"
          imagePullPolicy: Always #IfNotPresent
          ports:
            - name: transport
              containerPort: ${_Values_service_port}
              protocol: TCP
            - name: jmx
              containerPort: 1099
              protocol: TCP
          command: ["java", "-Xms${_Values_resources_requests_memory}", "-Xmx${_Values_resources_requests_memory}", ${_Values_profiler_command} "-cp", "/app/resources:/app/classes:/app/libs/*", "${_Values_command}"]
#          args: ["-Xmx${_Values_resources_requests_memory}"]
          resources:
            requests:
              memory: "${_Values_resources_requests_memory}"
              cpu: "${_Values_resources_requests_cpu}"

#          readinessProbe:
#            httpGet:
#              path: /actuator/health
#              port: transport
#            initialDelaySeconds: ${_Values_readinessProbe_initialDelaySeconds}
#            periodSeconds: 10
#            timeoutSeconds: 10
#            failureThreshold: 3
#          livenessProbe:
#            httpGet:
#              path: /actuator/health
#              port: transport
#            initialDelaySeconds: ${_Values_readinessProbe_initialDelaySeconds}
#            periodSeconds: 10
#            timeoutSeconds: 10
#            failureThreshold: 3

          volumeMounts:
            - mountPath: /usr/share/logs
              name: ${_Values_app_name}-applogs
            - mountPath: /usr/share/config/
              name: ${_Values_app_name}-config-files-volume
            - mountPath: /usr/share/profiler
              name: ${_Values_app_name}-profiler-volume

      volumes:
        - name: ${_Values_app_name}-applogs
          emptyDir: {}
        - name: ${_Values_app_name}-config-files-volume
          configMap:
            name: ${_Values_app_name}-config-files
        - name: ${_Values_app_name}-profiler-volume
          ${_Values_volume_type_profiler}
          ${_Values_volume_path_profiler}
